--- a/mafia-mmorpg/package.json
+++ b/mafia-mmorpg/package.json
@@ -43,7 +43,8 @@
     "express": "^5.1.0",
     "pixi.js": "^8.12.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.1.3",
