--- a/mafia-mmorpg-backend/MafiaMMORPG.Web/appsettings.Docker.json
+++ b/mafia-mmorpg-backend/MafiaMMORPG.Web/appsettings.Docker.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=mmrpg;Username=postgres;Password=postgres"
+    "Default": "Host=postgres;Port=5432;Database=mmrpg;Username=postgres;Password=postgres"
   },
   "Redis": {
-    "ConnectionString": "localhost:6379"
+    "ConnectionString": "redis:6379"
   },
   "Logging": {
     "LogLevel": {
