--- a/mafia-mmorpg/angular.json
+++ b/mafia-mmorpg/angular.json
@@ -22,8 +22,11 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.output.css"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/styles"]
+            },
             "outputMode": "static"
           },
           "configurations": {
@@ -76,7 +79,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.output.css"
             ]
           }
         }
