--- a/mafia-mmorpg-backend/MafiaMMORPG.Web/appsettings.json
+++ b/mafia-mmorpg-backend/MafiaMMORPG.Web/appsettings.json
@@ -43,5 +43,68 @@
     "AdminPassword": "Admin123!",
     "PlayerEmail": "player@mafya.local",
     "PlayerPassword": "Player123!"
+  },
+  "Progression": {
+    "PointsPerLevel": 5,
+    "BaseXp": 100,
+    "CurveK": 25.0,
+    "CurvePow": 1.5,
+    "LevelCap": 100
+  },
+  "Loot": {
+    "UseUInt64Rng": true,
+    "LegendaryAbsoluteProbability": 0.000000000004,
+    "RarityRates": {
+      "Easy": {
+        "Common": 0.80,
+        "Uncommon": 0.18,
+        "Rare": 0.02,
+        "Epic": 0.0,
+        "Legendary": 0.0
+      },
+      "Normal": {
+        "Common": 0.65,
+        "Uncommon": 0.28,
+        "Rare": 0.06,
+        "Epic": 0.01,
+        "Legendary": 0.0
+      },
+      "Hard": {
+        "Common": 0.50,
+        "Uncommon": 0.34,
+        "Rare": 0.12,
+        "Epic": 0.04,
+        "Legendary": 0.0
+      },
+      "Mythic": {
+        "Common": 0.35,
+        "Uncommon": 0.38,
+        "Rare": 0.18,
+        "Epic": 0.09,
+        "Legendary": 0.0
+      }
+    },
+    "RarityLevelBands": {
+      "Common": {
+        "Min": 1,
+        "Max": 60
+      },
+      "Uncommon": {
+        "Min": 5,
+        "Max": 80
+      },
+      "Rare": {
+        "Min": 10,
+        "Max": 90
+      },
+      "Epic": {
+        "Min": 15,
+        "Max": 100
+      },
+      "Legendary": {
+        "Min": 20,
+        "Max": 100
+      }
+    }
   }
 }
